<resources>
    <string name="app_name">BrittvanLeeuwenpset2</string>
    <string name="welcome">Welcome to this awesome app madlips! I will ask you to fill in words to complete a story. You won't be able to see the whole story until you are done filling in all the missing words. Click below to get started.</string>
    <string name="choose">Choose a story to make.</string>
    <string name="dance">Dance</string>
    <string name="random">Random</string>
    <string name="clothes">Clothes</string>
    <string name="university">University</string>
    <string name="tarzan">Tarzan</string>
    <string name="simple">Simple</string>


</resources>
